--- a/Makefile.in
+++ b/Makefile.in
@@ -488,7 +488,8 @@ EXTRA_DIST = fig4d_01.gif fig4d_02.gif fig4d_06.gif fig4d_07.gif \
 	MUTCD_Ped_Signal_-_Hand_with_timer.svg \
 	MUTCD_Ped_Signal_-_Steady_hand.svg MUTCD_Ped_Signal_-_Walk.svg \
 	pedestrian_and_left_turn_script.txt pedestrian_script.txt \
-	references.bib Signal_Timing_Manual_Second_Edition_22097.pdf \
+	events_script.txt references.bib \
+	Signal_Timing_Manual_Second_Edition_22097.pdf \
 	traffic_control_signals.py traffic_control_signals.tex \
 	state_diagram.txt build_RPMs.sh \
 	How_Traffic_Control_Signals_Work.spec
@@ -523,6 +524,7 @@ MUTCD_Ped_Signal_-_Steady_hand.pdf \
 MUTCD_Ped_Signal_-_Walk.pdf \
 signal_ccc.pdf \
 *_table.tex \
+events.csv \
 check_output.txt \
 verify_files.sh \
 *trace.txt 
@@ -1193,6 +1195,15 @@ check_output.txt : traffic_control_signals.py heavy_script.txt
 	python3 ${srcdir}/traffic_control_signals.py \
 --script ${srcdir}/heavy_script.txt \
 --duration 1000 --verbose 4 | tee ${builddir}/check_output.txt
+
+# A secondary target is the event output, for post-processing.
+events: events.csv
+.PHONEY: events
+
+events.csv : traffic_control_signals.py events_script.txt
+	python3 ${srcdir}/traffic_control_signals.py \
+--script ${srcdir}/events_script.txt \
+--duration 1000 --events-file events.csv
 
 clean-local: clean-local-check
 .PHONEY: clean-local-check
