--- a/Makefile.in
+++ b/Makefile.in
@@ -14,7 +14,7 @@
 
 @SET_MAKE@
 
-# File: Makefile.am, author: John Sauter, date: December 30, 2024.
+# File: Makefile.am, author: John Sauter, date: December 31, 2024.
 #
 # Build traffic_control_signals.pdf
 
@@ -496,8 +496,9 @@ EXTRA_DIST = signal_ccc.svg signal_ccu.svg signal_rrr.svg \
 	signal_cccl_Yellow.svg signal_llll_Flashing_Yellow.svg \
 	signal_llll_Green.svg signal_llll_Red.svg \
 	signal_llll_Yellow.svg signal_rrr_Green.svg signal_rrr_Red.svg \
-	signal_rrr_Yellow.svg process_events.py build_RPMs.sh \
-	build_video.sh How_Traffic_Control_Signals_Work.spec
+	signal_rrr_Yellow.svg background.png process_events.py \
+	build_RPMs.sh build_video.sh \
+	How_Traffic_Control_Signals_Work.spec
 
 # Support make check and make distcheck
 dist_check_DATA = check_expected_output.txt heavy_script.txt
@@ -1220,7 +1221,7 @@ signal_llll_Flashing_Yellow.png signal_llll_Green.png signal_llll_Red.png \
 signal_llll_Yellow.png signal_rrr_Green.png signal_rrr_Red.png \
 signal_rrr_Yellow.png MUTCD_Ped_Signal_-_Hand_with_timer.png \
 MUTCD_Ped_Signal_-_Steady_hand.png MUTCD_Ped_Signal_-_Walk.png \
-events.csv build_video.sh
+events.csv build_video.sh background.png
 	bash build_video.sh
 
 clean-local: clean-local-check
