Work on animation

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-# File: Makefile.am, author: John Sauter, date: March 2, 2025.
+# File: Makefile.am, author: John Sauter, date: March 9, 2025.
 #
 # Build traffic_control_signals.pdf
 
@@ -94,7 +94,8 @@ background.png \
 process_events.py 
 
 # Distribute the shell scripts which build the RPMs and the video animations.
-EXTRA_DIST += build_RPMs.sh build_video.sh render_animation.sh
+EXTRA_DIST += build_RPMs.sh build_animation.sh render_animation.sh \
+build_video.sh
 
 # Build the RPM if the developer types "make RPMs".
 .phoney: RPMs
@@ -244,9 +245,9 @@ check_output.txt : traffic_control_signals.py heavy_script.txt
 	python3 ${srcdir}/traffic_control_signals.py \
 --script "${srcdir}/$<" --duration 1000 --events-file "$@"
 
-# Creating the mkv file also creates the individual images.
-%_animation.mkv : %_animation.csv process_events.py build_video.sh \
-render_animation.sh \
+# Creating the PDF alco creates the individual images for the movie.
+%_animation.pdf : %_animation.csv \
+process_events.py build_animation.sh render_animation.sh \
 signal_ccc_Green.png signal_ccc_Red.png \
 signal_ccc_Yellow.png signal_ccu_Green.png signal_ccu_Red.png \
 signal_ccu_Yellow.png signal_Dark_3.png signal_Dark_4.png \
@@ -257,11 +258,12 @@ signal_rrr_Yellow.png MUTCD_Ped_Signal_-_Hand_with_timer.png \
 MUTCD_Ped_Signal_-_Steady_hand.png MUTCD_Ped_Signal_-_Walk.png \
 background.png car-38800411-right.png \
 car-38800411-up.png truck-51893967-up.png truck-51893967-right.png \
-man_walking_right.png 
-	bash build_video.sh "$@" "$<" "animation_$(*F)_temp"
-
-%_animation.pdf : %_animation.mkv
+man_walking_right.png
+	bash build_animation.sh "$<" "animation_$(*F)_temp"
 	-img2pdf --output "$@" animation_$(*F)_temp/frame_*.png
+
+%_animation.mkv : %_animation.pdf
+	bash build_video.sh "$@" "animation_$(*F)_temp"
 
 # When removing files, also remove the followins:
 CLEANFILES = \
