--- a/Makefile.in
+++ b/Makefile.in
@@ -14,7 +14,7 @@
 
 @SET_MAKE@
 
-# File: Makefile.am, author: John Sauter, date: March 2, 2025.
+# File: Makefile.am, author: John Sauter, date: March 9, 2025.
 #
 # Build traffic_control_signals.pdf
 
@@ -499,8 +499,9 @@ EXTRA_DIST = signal_ccc.svg signal_ccu.svg signal_rrr.svg \
 	signal_rrr_Yellow.svg car-38800411-right.svg \
 	car-38800411-up.svg truck-51893967-up.svg \
 	truck-51893967-right.svg man_walking_right.svg background.png \
-	process_events.py build_RPMs.sh build_video.sh \
-	render_animation.sh How_Traffic_Control_Signals_Work.spec
+	process_events.py build_RPMs.sh build_animation.sh \
+	render_animation.sh build_video.sh \
+	How_Traffic_Control_Signals_Work.spec
 
 # Support make check and make distcheck
 dist_check_DATA = check_expected_output.txt heavy_script.txt
@@ -1217,9 +1218,9 @@ check_output.txt : traffic_control_signals.py heavy_script.txt
 	python3 ${srcdir}/traffic_control_signals.py \
 --script "${srcdir}/$<" --duration 1000 --events-file "$@"
 
-# Creating the mkv file also creates the individual images.
-%_animation.mkv : %_animation.csv process_events.py build_video.sh \
-render_animation.sh \
+# Creating the PDF alco creates the individual images for the movie.
+%_animation.pdf : %_animation.csv \
+process_events.py build_animation.sh render_animation.sh \
 signal_ccc_Green.png signal_ccc_Red.png \
 signal_ccc_Yellow.png signal_ccu_Green.png signal_ccu_Red.png \
 signal_ccu_Yellow.png signal_Dark_3.png signal_Dark_4.png \
@@ -1230,11 +1231,12 @@ signal_rrr_Yellow.png MUTCD_Ped_Signal_-_Hand_with_timer.png \
 MUTCD_Ped_Signal_-_Steady_hand.png MUTCD_Ped_Signal_-_Walk.png \
 background.png car-38800411-right.png \
 car-38800411-up.png truck-51893967-up.png truck-51893967-right.png \
-man_walking_right.png 
-	bash build_video.sh "$@" "$<" "animation_$(*F)_temp"
-
-%_animation.pdf : %_animation.mkv
+man_walking_right.png
+	bash build_animation.sh "$<" "animation_$(*F)_temp"
 	-img2pdf --output "$@" animation_$(*F)_temp/frame_*.png
+
+%_animation.mkv : %_animation.pdf
+	bash build_video.sh "$@" "animation_$(*F)_temp"
 
 clean-local: clean-local-check
 .PHONEY: clean-local-check
